# multi-fidelity-bioreactor

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
config/: bo_config.yaml  chain_config.yaml  chain_config_ellipse.yaml  chain_config_ellipse_corrected.yaml  chain_config_ellipse_smoke.yaml  chain_config_ellipse_smoke7.yaml  chain_config_smoke.yaml  chain_config_su1_test.yaml  chain_f4_bug2_diag.yaml  chain_mpi_f6.yaml  chain_mpi_fresh_diag.yaml  chain_mpi_smoke_diag.yaml  chain_mpi_smoke_f3.yaml  chain_mpi_smoke_f3_4ranks.yaml  chain_mpi_smoke_f4.yaml  chain_mpi_smoke_f4_n5.yaml  param_space.yaml  sample_config.yaml  slurm_health_template.sh  slurm_mpi_template.sh  slurm_template.sh  slurm_video_template.sh  sweep_example.json  sweep_fb_fill.json  sweep_fb_fill_l7.json  sweep_fb_fill_l7_mpi_ckpt.json  sweep_fb_fill_l7_v2.json  sweep_fb_fill_l7_v3_f03.json  sweep_fb_fill_l8_mpi_ckpt.json  sweep_fb_theta.json  sweep_fb_theta_l7.json  sweep_fb_theta_l7_mpi_ckpt.json  sweep_fb_theta_l8.json  sweep_fb_theta_l8_mpi_ckpt.json  tau_sweep_sentinel.sh
docs_site/: glossary.md  index.md  scripts-overview.md  setup.md  testing.md  video-generation.md
examples/: synthetic_bo_demo.py
experiments/: hypothesis_ledger.json  run_provenance.csv
sandbox/: mpi_henry_restart.c  mpi_henry_restart.sh
scripts/: _l9_l10_autopilot.py  _postprocess_l10_stalled.py  _postprocess_l9_batch.py  _postprocess_l9_batch.sh  benchmark_report.py  benchmark_submit.py  chain.py  check_ledger.py  check_restart_run.py  collect_results.py  commit_canonical.py  finalize_grid_results.py  health_report.py  launch.py  loop.py  mpi_diag_submit.py  mpi_fix_verify.py  mpi_same_omega_restart.py  mpi_smoke_test.py  plot_checkpoint_validation.py  plot_convergence.py  plot_heatmaps.py  plot_kim_overlay_tau.py  postprocess.py  render_videos.py  sample.py  simulate.py  stage_segment.py  submit_compat_grid.py  submit_extended_grid.py  submit_health_runs.py  submit_nc10.py  submit_video_run.py  suggest.py  sweep.py  tau_chain_watchdog.py  theta_chain_watchdog.py  train_surrogate.py
src/: BioReactor.c  (+7 more)
(+92 files in other folders)
