[project]
name = "bioreactor-opt"
version = "0.1.0"
description = "Multi-fidelity Bayesian optimization suite for rocking bioreactor conditions"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "Pillow",
    "pandas",
    "pyyaml",
    "f3dasm>=1.5",
    "mfbml @ git+https://github.com/JiaxiangYi96/mfbml.git",
    "mfpml @ git+https://github.com/JiaxiangYi96/mfpml.git",
    "torch",
    "pytest",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
]
