[project]
name = "bioreactor-opt"
version = "0.1.0"
description = "Multi-fidelity Bayesian optimization suite for rocking bioreactor conditions"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "Pillow",
    "pandas",
    "pyyaml",
    "f3dasm>=1.5",
    "mfbml @ git+https://github.com/JiaxiangYi96/mfbml.git",
    "mfpml @ git+https://github.com/JiaxiangYi96/mfpml.git",
    "torch",
    "pytest",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
# Default run is the fast, hermetic unit-test suite only. "medium" (real
# fidelity-3 CFD run, ~2 min) and "hpc" (submits real SLURM jobs and waits
# for completion) are opt-in via `pytest -m medium` / `-m hpc` / `-m "medium or hpc"`.
addopts = "-m 'not medium and not hpc'"
markers = [
    "medium: short CFD run, fidelity 3; ~2 min on OSCAR",
    "hpc: SLURM-required; fidelity 5-7",
]
